# projects

./: readme.md  待做工作.txt
NLP/Gene/: Untitled.ipynb  genLabeledData.py  util.py  关系分析.ipynb  基因摘要处理.ipynb  基因通路分析.ipynb
NLP/MedicalRecord/: Untitled.ipynb
NLP/TrainBert/: run_mlm.py
NLP/TrainBert_BAK/: train.py  trainTokenizer.py
NLP/entity_extractor_by_ner-master/: NER测试结果.txt  main.py  regexModel.py  system.config
NLP/paddlenlp/: run.py
Notes/: 20220428.txt
OCR/: TextDetection.py  output.txt
OCR/tesseract/: imgAugment.py  训练步骤.txt
OCR/trocr/: process.py  res.box  res.txt  res2.txt  results.txt  trocr.py
Vision/: unet_crop_images_video_Temple_v2-白光-0328-Copy1.ipynb  基因预测.ipynb
Vision/EyeTrack/: run.py
Vision/EyeTrack/eyeLike/: CMakeLists.txt
Vision/EyeTrack/eyeLike/build.bak/: CMakeCache.txt
Vision/EyeTrack/eyeLike/buildw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  eyelike_project.sln
Vision/EyeTrack/eyeLike/buildw/src/: cmake_install.cmake  eyeLike.vcxproj  eyeLike.vcxproj.filters  main.cpp
Vision/EyeTrack/eyeLike/src/: main.cpp
Vision/GazeTracking/: example.py
Vision/GenesPred/: Untitled.ipynb  extractFeatures.py  train.py  图像特征提取-Copy1.ipynb  图像特征提取.ipynb  基因预测-pytorch-文章模型.ipynb  基因预测-不分组-Copy2.ipynb  基因预测-不分组.ipynb  基因预测.ipynb
Vision/HE2RNA/: model.py
Vision/gallstone/: VIA2Unet_Mask_Template-巩膜突0317.ipynb  crop.py  crop_func.py  train_xnet.py  unet_crop_裁剪原图及标记220128-Copy1.ipynb  unet_crop_裁剪原图及标记220128.ipynb  unet_crop_裁剪原图及标记220506.ipynb  (+2 more)
(+481 files in other folders)
